--- a/RemoteClient/RemoteClient.vcxproj.filters
+++ b/RemoteClient/RemoteClient.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="StatusDlg.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="WatchDialog.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="RemoteClient.cpp">
@@ -57,6 +60,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="StatusDlg.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="WatchDialog.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
