--- a/RemoteClient/RemoteClient.vcxproj
+++ b/RemoteClient/RemoteClient.vcxproj
@@ -193,6 +193,7 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="StatusDlg.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Tool.h" />
     <ClInclude Include="WatchDialog.h" />
   </ItemGroup>
   <ItemGroup>
@@ -207,6 +208,7 @@
     <ClCompile Include="RemoteClient.cpp" />
     <ClCompile Include="RemoteClientDlg.cpp" />
     <ClCompile Include="StatusDlg.cpp" />
+    <ClCompile Include="Tool.cpp" />
     <ClCompile Include="WatchDialog.cpp" />
   </ItemGroup>
   <ItemGroup>
