--- a/RemoteCtrl2407/RemoteCtrl2407.vcxproj.filters
+++ b/RemoteCtrl2407/RemoteCtrl2407.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="Packet.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Queue.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="RemoteCtrl2407.cpp">
