--- a/RemoteCtrl2407/RemoteCtrl2407.vcxproj.filters
+++ b/RemoteCtrl2407/RemoteCtrl2407.vcxproj.filters
@@ -51,6 +51,12 @@
     <ClInclude Include="Queue.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Thread.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="EServer.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="RemoteCtrl2407.cpp">
@@ -65,10 +71,10 @@
     <ClCompile Include="LockInfoDialog.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="Tool.cpp">
+    <ClCompile Include="Command.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="Command.cpp">
+    <ClCompile Include="EServer.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
